--- a/company/templates/company/bookings_list.html
+++ b/company/templates/company/bookings_list.html
@@ -4,7 +4,7 @@
 
   <h2 class="mb-3">Booking List</h2>
 
-  <table class="table">
+  <table class="table mb-5">
     <thead class="table-primary">
       <tr>
         <th scope="col">Id</th>
@@ -15,6 +15,7 @@
       </tr>
     </thead>
     <tbody>
+      {% csrf_token %}
       {% for booking in page_bookings %}
       <tr>
         <th class="table-primary" scope="row">{{ booking.id }}</th>
@@ -34,22 +35,48 @@
     </tbody>
   </table>
 
-  <div class="pagination">
-    <span class="step-links">
+  <nav aria-label="Page pagination">
+    <ul class="pagination justify-content-center">
       {% if page_bookings.has_previous %}
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ page_bookings.previous_page_number }}">previous</a>
+      <li class="page-item">
+        <a class="page-link" href="?page=1">&laquo; first</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_bookings.previous_page_number }}">
+          Previous
+        </a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_bookings.previous_page_number }}">
+          {{ page_bookings.previous_page_number }}
+        </a>
+      </li>
       {% endif %}
 
-      <span class="current">
-        Page {{ page_bookings.number }} of {{ page_bookings.paginator.num_pages }}.
-      </span>
+      <li class="page-item active" aria-current="page">
+        <span class="page-link">
+          {{ page_bookings.number }}
+        </span>
+      </li>
 
       {% if page_bookings.has_next %}
-        <a href="?page={{ page_bookings.next_page_number }}">next</a>
-        <a href="?page={{ page_bookings.paginator.num_pages }}">last &raquo;</a>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_bookings.next_page_number }}">
+          {{ page_bookings.next_page_number }}
+        </a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page_bookings.next_page_number }}">
+          Next
+        </a>
+      </li>
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_bookings.paginator.num_pages }}">
+            last &raquo;
+          </a>
+        </li>
       {% endif %}
-    </span>
-  </div>
+    </ul>
+  </nav>
 
 {% endblock content %}
